# thracery

./: LICENSE  README.md  thracery.cabal
app/: DevelMain.hs  Main.hs
src/: Thracery.hs
